Fixes elements overflowing from `.well` on ie11
- Also corrected the quantity label for bonds

--- a/src/styles/bootstrap-custom/_wells.less
+++ b/src/styles/bootstrap-custom/_wells.less
@@ -1,5 +1,5 @@
 .well {
-  flex: 1;
+  flex: 0 1 auto;
   border-radius: 0;
   box-shadow: none;
   margin-bottom: 0;
